Change format of permalinks, add redirects
By default, jekyll makes categories part of the permalink. This commit
changes that to only include the date and the title.

--- a/_config.yml
+++ b/_config.yml
@@ -22,3 +22,8 @@ markdown: kramdown
 show_drafts: false
 
 exclude: ["vendor", "Gemfile*"]
+
+permalink: /:year/:month/:day/:title:output_ext
+
+plugins:
+  - jekyll-redirect-from
