--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        ruby: [ '3.0', '3.1' ]
+        ruby: [ '3.1' ]
 
     name: Ruby ${{ matrix.ruby }}
     steps:
